# angular-library-starter

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  CHANGELOG.md  INLINING.md  README.md  WORKSPACE  angular-library-starter.ts  build.js  index.ts  karma.conf.js  license-banner.txt  package-lock.json  package.json  public_api.ts  rollup.config.js  rollup.es.config.js  spec.bundle.js  tsconfig-build.json  tsconfig.json  tslint.json
src/: angular-library-starter.ts
src/components/: sum.component.css  sum.component.html  sum.component.scss  sum.component.ts
src/modules/: arithmetic.module.ts
src/services/: sum-service.ts
tests/: BUILD.bazel
tests/components/: sum.component.spec.ts
tests/services/: sum.service.spec.ts
tools/: BUILD.bazel  defaults.bzl  init_browser_spec.ts
