package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "tsconfig.json"
    ]
)

filegroup(
    name = "web_test_bootstrap_scripts",
    srcs = [
        "@npm//node_modules/reflect-metadata:Reflect.js",
        "@npm//node_modules/zone.js:dist/zone.js",
        "@npm//node_modules/zone.js:dist/zone-testing.js",
        "@npm//node_modules/zone.js:dist/task-tracking.js"
    ]
)

load("@angular//:index.bzl", "ng_module", "ng_package")
load("//tools:defaults.bzl", "PACKAGE_NAME", "PACKAGE_NAME_SCOPE", "LIBRARY_DEPS", "ROLLUP_GLOBALS")

# Run the Angular AOT template compiler
# https://angular.github.io/bazel-builds/src/ng_module.html#ng_module
ng_module(
    name = "src",
    module_name = PACKAGE_NAME_SCOPE,
    deps = [
        "@npm//tslib",
        "@npm//@types"
    ] + LIBRARY_DEPS,
    srcs = glob(
        [
            "*.ts",
            "src/**/*.ts",
        ],
        exclude = [
            "src/**/*.spec.ts"
        ]
    ),
    assets = glob(
        [
            "*.css",
            "*.html"
        ]
    ),
    entry_point = "public_api.ts",
    flat_module_out_file = PACKAGE_NAME,
    inline_resources = True, 
    tsconfig = "//:tsconfig-build.json"
)

# Produce an npm-ready package from the library
# https://angular.github.io/bazel-builds/src/ng_package/ng_package.html#ng_package
ng_package(
    name = PACKAGE_NAME_SCOPE,
    deps = [
        ":src"
    ],
    srcs = [
        "package.json"
    ],
    entry_point = "index.js",
    entry_point_name = PACKAGE_NAME,
    globals = ROLLUP_GLOBALS,
    readme_md = "README.md",
    license_banner = "license-banner.txt"
)
