package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test_suite")
load("//tools:defaults.bzl", "TEST_DEPS")

ts_library(
    name = "test_lib",
    testonly = True,
    srcs = glob(
        [
            "*/*.spec.ts"
        ]
    ),
    deps = [
        "//:src",
        "@npm//tslib",
        "@npm//@types",
        "@npm//zone.js",
    ] + TEST_DEPS
)

ts_web_test_suite(
    name = "test_web",
    bootstrap = [
        "//:web_test_bootstrap_scripts"
    ],
    deps = [
        ":test_lib",
        "//tools:browser",
    ],
    karma = "@npm//@bazel/karma/bin:karma",
    # Run unit tests on local Chromium by default
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local"
    ]
)
