package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "browser",
    testonly = True,
    srcs = ["init_browser_spec.ts"],
    deps = [
        "@angular//packages/compiler",
        "@angular//packages/core/testing",
        "@angular//packages/platform-browser-dynamic/testing",
        "@npm//@types"
    ]
)
